welcome-service/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  welcome-service
  template:
    metadata:
      labels:
        app:  welcome-service
    spec:
      containers:
      - name: welcome-container
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: welcome-configmap
---
