welcome-service/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: welcome-service
spec:
  selector:
    app: welcome-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
---
