welcome-service/all.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: welcome-service
  template:
    metadata:
      labels:
        app: welcome-service
    spec:
      containers:
      - name: welcome-service
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: welcome-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: welcome-service
spec:
  selector:
    app: welcome-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-service-ingress
  annotations:
    networking.kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: welcome.local.gd
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: welcome-service
            port:
              number: 80
