welcome-service/ingress-nginx.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-local-gd
spec:
  ingressClassName: nginx
  rules:
    - host: welcome.local.gd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: welcome
                port:
                  number: 80
---
